--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "@izayl/eslint-config",
+  "name": "@izayl/eslint-config-react",
   "version": "0.4.0",
-  "description": "> TODO: description",
+  "description": "",
   "author": "izayl <izayl@163.com>",
   "homepage": "https://github.com/izayl/eslint-config#readme",
   "license": "MIT",
   "main": "index.js",
-  "publishConfig": {
-    "access": "public"
-  },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/izayl/eslint-config.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "lint": "eslint . --config=index.js"
   },
   "bugs": {
     "url": "https://github.com/izayl/eslint-config/issues"
   },
-  "devDependencies": {
-    "eslint": "^7.23.0"
-  },
   "dependencies": {
-    "@izayl/eslint-config-react": "^0.4.0"
+    "@izayl/eslint-config-ts": "workspace:*",
+    "eslint-plugin-react": "^7.29.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "react": "^17.0.2",
+    "typescript": "^4.2.4"
+  },
+  "peerDependencies": {
+    "eslint": "^7.32.0"
   }
 }
