--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "@izayl/eslint-config-react",
-  "version": "0.4.0",
+  "name": "@izayl/eslint-config",
+  "version": "0.5.0",
   "description": "",
   "author": "izayl <izayl@163.com>",
   "homepage": "https://github.com/izayl/eslint-config#readme",
   "license": "MIT",
   "main": "index.js",
-  "publishConfig": {
-    "access": "public"
-  },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/izayl/eslint-config.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/izayl/eslint-config/issues"
   },
   "dependencies": {
-    "@izayl/eslint-config-ts": "^0.4.0",
-    "eslint-plugin-react": "^7.23.1"
+    "@izayl/eslint-config-react": "workspace:*"
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
-    "react": "^17.0.2",
-    "typescript": "^4.2.4"
+    "eslint": "^8.15.0"
+  },
+  "peerDependencies": {
+    "eslint": ">=7"
   }
 }
