--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@izayl/eslint-config",
+  "name": "@izayl/eslint-config-monorepo",
   "version": "0.0.1",
   "description": "my eslint config preset",
   "main": "index.js",
@@ -13,6 +13,7 @@
     "release": "lerna publish --conventional-commits"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "@izayl/eslint-config": "*",
     "eslint": "^8.15.0"
   }
