--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@izayl/eslint-config-monorepo",
   "version": "0.0.1",
+  "packageManager": "pnpm@7.0.1",
   "description": "my eslint config preset",
   "main": "index.js",
   "repository": "git@github.com:izayl/eslint-config.git",
@@ -9,8 +10,7 @@
   "private": true,
   "scripts": {
     "lint": "pnpm -r lint",
-    "preinstall": "npx only-allow pnpm",
-    "release": "lerna publish --conventional-commits"
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
