--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -28,7 +28,7 @@ jobs:
       - name: install dependencies
         run: pnpm install --frozen-lockfile
       - name: create and publish versions
-        uses: changesets/action@master
+        uses: changesets/action@v1
         with:
           version: pnpm ci:version
           commit: 'chore: update versions'
