--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "scripts": {
     "lint": "pnpm -r lint",
+    "ci:publish": "changeset publish",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
