--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "lint": "pnpm -r lint",
     "ci:publish": "changeset publish",
+    "ci:version": "changeset version",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
