ci: add chekcer

--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -23,6 +23,8 @@ jobs:
         run: npm i pnpm@latest -g
       - name: Setup npmrc
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+      - name: Check NPM User
+        run: npm whoami
       - name: setup pnpm config
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: install dependencies
