--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:izayl/eslint-config.git",
   "author": "izayl <izayl@163.com>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "lint": "eslint *.js --config=index.js"
   },
