--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -9,6 +9,9 @@
   "files": [
     "index.js"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/izayl/eslint-config.git"
