--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,11 +27,11 @@
     "eslint-plugin-react": "^7.29.4"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^8.15.0",
     "react": "^17.0.2",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": ">=7"
   }
 }
